--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 <script src="Dataset\Traffic_counts.js"></script>
 <script type= 'text/javascript' src="vis\calender.js"></script>
-<script type= 'text/javascript' src="Countonmap.js"></script>
+<script type= 'text/javascript' src="vis\Countonmap.js"></script>
 <script type="text/javascript" src="vis\selected.js"></script>
 <script type="text/javascript" src="vis\map.js"></script>
 <script type="text/javascript" src="vis\button.js"></script>
